@@ -1,5 +1,6 @@
 2012-12-10  JJ Allaire <jj@rstudio.org>
 
+        * src/AttributesGen.cpp: prune unnecessary includes from RcppExports
         * src/Timer.cpp: fix timer build issues on windows
 
 2012-12-10 Romain Francois <romain@r-enthusiasts.com>
